5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1590_825.log
== TEST (2019-03-25 15:15:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=input("valor do raio")
area=pi*raio**2
volume=(4/3*pi*raio***3)
print(round(area,3))
print(round(volume,3))

-- ERROR:
File "XXXX", line 7
    volume=(4/3*pi*raio***3)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:15:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=input("valor do raio")
area=pi*raio**2
volume=4/3*pi*raio***3
print(round(area,3))
print(round(volume,3))

-- ERROR:
File "XXXX", line 7
    volume=4/3*pi*raio***3
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:15:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=input("valor do raio")
area=pi*raio**2
volume=4/3(*pi*(raio**3))
print(round(area,3))
print(round(volume,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area=pi*raio**2
NameError: name 'raio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:16:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=input("valor do raio")
area=(pi*(raio**2))
volume=4/3(*pi*(raio**3))
print(round(area,3))
print(round(volume,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area=(pi*(raio**2))
NameError: name 'raio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:16:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("valor do raio"))
area=(pi*(raio**2))
volume=4/3(*pi*(raio**3))
print(round(area,3))
print(round(volume,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area=(pi*(raio**2))
NameError: name 'raio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:17:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("valor do raio"))
area=(pi*(a**2))
volume=4/3(*pi*(raio**3))
print(round(area,3))
print(round(volume,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    volume=4/3(*pi*(raio**3))
NameError: name 'raio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:17:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("valor do raio"))
area=(pi*(a**2))
volume=4/3(*pi*(a**3))
print(round(area,3))
print(round(volume,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    volume=4/3(*pi*(a**3))
TypeError: int object argument after * must be an iterable, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:18:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("valor do raio"))
area=pi*(a**2)
volume=4/3(*pi*(a**3))
print(round(area,3))
print(round(volume,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    volume=4/3(*pi*(a**3))
TypeError: int object argument after * must be an iterable, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:18:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r=float(input("valor do raio"))
area=pi*(r**2)
volume=4/3(*pi*(r**3))
print(round(area,3))
print(round(volume,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    volume=4/3(*pi*(r**3))
TypeError: int object argument after * must be an iterable, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:18:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r=float(input("valor do raio"))
area=pi*(r**2)
volume=4/3*(pi*(r**3))
print(round(area,3))
print(round(volume,3))

-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:19:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r=float(input("valor do raio"))
area=pi*(r**2)
volume=4/3*(pi*(r**3))
print(round(area,3))
print(round(volume,3))

-- EXECUTION TIME:
0.148002
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
